// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SupportingText /> should render child components 1`] = `
.c0 {
  font-size: 0.878rem;
}

.c0.supporting-text--top {
  margin: 2px 0;
}

.c0.supporting-text--bottom {
  margin: 0.311rem 0 0;
}

<Component
  theme={
    Object {
      "backgroundColors": Object {
        "backgroundColor1": "#FBCE07",
        "backgroundColor10": "#404040",
        "backgroundColor11": "#BD2C2F",
        "backgroundColor2": "#DD1D21",
        "backgroundColor3": "#0097BB",
        "backgroundColor4": "#003C88",
        "backgroundColor5": "#008443",
        "backgroundColor6": "#FFFFFF",
        "backgroundColor7": "#F9F9F9",
        "backgroundColor8": "#D9D9D9",
        "backgroundColor9": "#595959",
      },
      "borderColors": Object {
        "borderColor1": "#FBCE07",
        "borderColor10": "#F9F9F9",
        "borderColor11": "#7F7F7F",
        "borderColor2": "#DD1D21",
        "borderColor3": "#0097BB",
        "borderColor4": "#008443",
        "borderColor5": "#D9D9D9",
        "borderColor6": "#A6A6A6",
        "borderColor7": "#595959",
        "borderColor8": "#404040",
        "borderColor9": "#FFFFFF",
      },
      "breakpoints": Object {
        "lg": "896px",
        "md": "768px",
        "sm": "640px",
        "up": [Function],
        "xl": "1080px",
        "xl2": "1600px",
        "xs": "480px",
      },
      "fontColors": Object {
        "fontColor1": "#DD1D21",
        "fontColor2": "#0097BB",
        "fontColor3": "#008443",
        "fontColor4": "#404040",
        "fontColor5": "#FFFFFF",
        "fontColor6": "#7F7F7F",
      },
      "fontSizes": Object {
        "lg": "1.138rem",
        "md": "1rem",
        "sm": "0.878rem",
        "xl": "1.296rem",
        "xl2": "1.476rem",
        "xl3": "1.68rem",
        "xl4": "1.913rem",
        "xl5": "2.178rem",
        "xl6": "2.479rem",
        "xs": "0.772rem",
      },
      "linkColors": Object {
        "linkColor1": "#003C88",
        "linkColor2": "#404040",
        "linkColor3": "#0A274D",
        "linkColor4": "#800080",
      },
      "palette": Object {
        "helpers": Object {
          "applyAlphaToColour": [Function],
        },
        "misc": Object {
          "misc1": "#811114",
          "misc2": "#BD2C2F",
          "misc3": "#62BFD0",
          "misc4": "#800080",
          "misc5": "#0A274D",
        },
        "neutral": Object {
          "black": "#000000",
          "grey1": "#F9F9F9",
          "grey2": "#D9D9D9",
          "grey3": "#A6A6A6",
          "grey4": "#7F7F7F",
          "grey5": "#595959",
          "grey6": "#404040",
          "white": "#FFFFFF",
        },
        "primary": Object {
          "primary1": "#FBCE07",
          "primary2": "#DD1D21",
          "primary3": "#0097BB",
        },
        "secondary": Object {
          "secondary1": "#003C88",
          "secondary2": "#008443",
          "secondary3": "#89CFDC",
        },
      },
      "spacing": Object {
        "lg": "1.476rem",
        "md": "1rem",
        "sm": "0.678rem",
        "xl": "2.178rem",
        "xl2": "3.213rem",
        "xl3": "4.742rem",
        "xl4": "6.997rem",
        "xl5": "10.326rem",
        "xs": "0.459rem",
        "xs2": "0.311rem",
        "xs3": "0.211rem",
      },
    }
  }
>
  <SupportingText
    content={<ContentComponent />}
  >
    <styled.div
      className="supporting-text supporting-text--top"
      theme={
        Object {
          "backgroundColors": Object {
            "backgroundColor1": "#FBCE07",
            "backgroundColor10": "#404040",
            "backgroundColor11": "#BD2C2F",
            "backgroundColor2": "#DD1D21",
            "backgroundColor3": "#0097BB",
            "backgroundColor4": "#003C88",
            "backgroundColor5": "#008443",
            "backgroundColor6": "#FFFFFF",
            "backgroundColor7": "#F9F9F9",
            "backgroundColor8": "#D9D9D9",
            "backgroundColor9": "#595959",
          },
          "borderColors": Object {
            "borderColor1": "#FBCE07",
            "borderColor10": "#F9F9F9",
            "borderColor11": "#7F7F7F",
            "borderColor2": "#DD1D21",
            "borderColor3": "#0097BB",
            "borderColor4": "#008443",
            "borderColor5": "#D9D9D9",
            "borderColor6": "#A6A6A6",
            "borderColor7": "#595959",
            "borderColor8": "#404040",
            "borderColor9": "#FFFFFF",
          },
          "breakpoints": Object {
            "lg": "896px",
            "md": "768px",
            "sm": "640px",
            "up": [Function],
            "xl": "1080px",
            "xl2": "1600px",
            "xs": "480px",
          },
          "fontColors": Object {
            "fontColor1": "#DD1D21",
            "fontColor2": "#0097BB",
            "fontColor3": "#008443",
            "fontColor4": "#404040",
            "fontColor5": "#FFFFFF",
            "fontColor6": "#7F7F7F",
          },
          "fontSizes": Object {
            "lg": "1.138rem",
            "md": "1rem",
            "sm": "0.878rem",
            "xl": "1.296rem",
            "xl2": "1.476rem",
            "xl3": "1.68rem",
            "xl4": "1.913rem",
            "xl5": "2.178rem",
            "xl6": "2.479rem",
            "xs": "0.772rem",
          },
          "linkColors": Object {
            "linkColor1": "#003C88",
            "linkColor2": "#404040",
            "linkColor3": "#0A274D",
            "linkColor4": "#800080",
          },
          "palette": Object {
            "helpers": Object {
              "applyAlphaToColour": [Function],
            },
            "misc": Object {
              "misc1": "#811114",
              "misc2": "#BD2C2F",
              "misc3": "#62BFD0",
              "misc4": "#800080",
              "misc5": "#0A274D",
            },
            "neutral": Object {
              "black": "#000000",
              "grey1": "#F9F9F9",
              "grey2": "#D9D9D9",
              "grey3": "#A6A6A6",
              "grey4": "#7F7F7F",
              "grey5": "#595959",
              "grey6": "#404040",
              "white": "#FFFFFF",
            },
            "primary": Object {
              "primary1": "#FBCE07",
              "primary2": "#DD1D21",
              "primary3": "#0097BB",
            },
            "secondary": Object {
              "secondary1": "#003C88",
              "secondary2": "#008443",
              "secondary3": "#89CFDC",
            },
          },
          "spacing": Object {
            "lg": "1.476rem",
            "md": "1rem",
            "sm": "0.678rem",
            "xl": "2.178rem",
            "xl2": "3.213rem",
            "xl3": "4.742rem",
            "xl4": "6.997rem",
            "xl5": "10.326rem",
            "xs": "0.459rem",
            "xs2": "0.311rem",
            "xs3": "0.211rem",
          },
        }
      }
    >
      <div
        className="c0 supporting-text supporting-text--top"
      >
        <ContentComponent>
          <p>
            Content component copy
          </p>
        </ContentComponent>
      </div>
    </styled.div>
  </SupportingText>
</Component>
`;

exports[`<SupportingText /> should render correctly 1`] = `
.c0 {
  font-size: 0.878rem;
}

.c0.supporting-text--top {
  margin: 2px 0;
}

.c0.supporting-text--bottom {
  margin: 0.311rem 0 0;
}

<Component
  theme={
    Object {
      "backgroundColors": Object {
        "backgroundColor1": "#FBCE07",
        "backgroundColor10": "#404040",
        "backgroundColor11": "#BD2C2F",
        "backgroundColor2": "#DD1D21",
        "backgroundColor3": "#0097BB",
        "backgroundColor4": "#003C88",
        "backgroundColor5": "#008443",
        "backgroundColor6": "#FFFFFF",
        "backgroundColor7": "#F9F9F9",
        "backgroundColor8": "#D9D9D9",
        "backgroundColor9": "#595959",
      },
      "borderColors": Object {
        "borderColor1": "#FBCE07",
        "borderColor10": "#F9F9F9",
        "borderColor11": "#7F7F7F",
        "borderColor2": "#DD1D21",
        "borderColor3": "#0097BB",
        "borderColor4": "#008443",
        "borderColor5": "#D9D9D9",
        "borderColor6": "#A6A6A6",
        "borderColor7": "#595959",
        "borderColor8": "#404040",
        "borderColor9": "#FFFFFF",
      },
      "breakpoints": Object {
        "lg": "896px",
        "md": "768px",
        "sm": "640px",
        "up": [Function],
        "xl": "1080px",
        "xl2": "1600px",
        "xs": "480px",
      },
      "fontColors": Object {
        "fontColor1": "#DD1D21",
        "fontColor2": "#0097BB",
        "fontColor3": "#008443",
        "fontColor4": "#404040",
        "fontColor5": "#FFFFFF",
        "fontColor6": "#7F7F7F",
      },
      "fontSizes": Object {
        "lg": "1.138rem",
        "md": "1rem",
        "sm": "0.878rem",
        "xl": "1.296rem",
        "xl2": "1.476rem",
        "xl3": "1.68rem",
        "xl4": "1.913rem",
        "xl5": "2.178rem",
        "xl6": "2.479rem",
        "xs": "0.772rem",
      },
      "linkColors": Object {
        "linkColor1": "#003C88",
        "linkColor2": "#404040",
        "linkColor3": "#0A274D",
        "linkColor4": "#800080",
      },
      "palette": Object {
        "helpers": Object {
          "applyAlphaToColour": [Function],
        },
        "misc": Object {
          "misc1": "#811114",
          "misc2": "#BD2C2F",
          "misc3": "#62BFD0",
          "misc4": "#800080",
          "misc5": "#0A274D",
        },
        "neutral": Object {
          "black": "#000000",
          "grey1": "#F9F9F9",
          "grey2": "#D9D9D9",
          "grey3": "#A6A6A6",
          "grey4": "#7F7F7F",
          "grey5": "#595959",
          "grey6": "#404040",
          "white": "#FFFFFF",
        },
        "primary": Object {
          "primary1": "#FBCE07",
          "primary2": "#DD1D21",
          "primary3": "#0097BB",
        },
        "secondary": Object {
          "secondary1": "#003C88",
          "secondary2": "#008443",
          "secondary3": "#89CFDC",
        },
      },
      "spacing": Object {
        "lg": "1.476rem",
        "md": "1rem",
        "sm": "0.678rem",
        "xl": "2.178rem",
        "xl2": "3.213rem",
        "xl3": "4.742rem",
        "xl4": "6.997rem",
        "xl5": "10.326rem",
        "xs": "0.459rem",
        "xs2": "0.311rem",
        "xs3": "0.211rem",
      },
    }
  }
>
  <SupportingText
    content="Test content"
  >
    <styled.div
      className="supporting-text supporting-text--top"
      theme={
        Object {
          "backgroundColors": Object {
            "backgroundColor1": "#FBCE07",
            "backgroundColor10": "#404040",
            "backgroundColor11": "#BD2C2F",
            "backgroundColor2": "#DD1D21",
            "backgroundColor3": "#0097BB",
            "backgroundColor4": "#003C88",
            "backgroundColor5": "#008443",
            "backgroundColor6": "#FFFFFF",
            "backgroundColor7": "#F9F9F9",
            "backgroundColor8": "#D9D9D9",
            "backgroundColor9": "#595959",
          },
          "borderColors": Object {
            "borderColor1": "#FBCE07",
            "borderColor10": "#F9F9F9",
            "borderColor11": "#7F7F7F",
            "borderColor2": "#DD1D21",
            "borderColor3": "#0097BB",
            "borderColor4": "#008443",
            "borderColor5": "#D9D9D9",
            "borderColor6": "#A6A6A6",
            "borderColor7": "#595959",
            "borderColor8": "#404040",
            "borderColor9": "#FFFFFF",
          },
          "breakpoints": Object {
            "lg": "896px",
            "md": "768px",
            "sm": "640px",
            "up": [Function],
            "xl": "1080px",
            "xl2": "1600px",
            "xs": "480px",
          },
          "fontColors": Object {
            "fontColor1": "#DD1D21",
            "fontColor2": "#0097BB",
            "fontColor3": "#008443",
            "fontColor4": "#404040",
            "fontColor5": "#FFFFFF",
            "fontColor6": "#7F7F7F",
          },
          "fontSizes": Object {
            "lg": "1.138rem",
            "md": "1rem",
            "sm": "0.878rem",
            "xl": "1.296rem",
            "xl2": "1.476rem",
            "xl3": "1.68rem",
            "xl4": "1.913rem",
            "xl5": "2.178rem",
            "xl6": "2.479rem",
            "xs": "0.772rem",
          },
          "linkColors": Object {
            "linkColor1": "#003C88",
            "linkColor2": "#404040",
            "linkColor3": "#0A274D",
            "linkColor4": "#800080",
          },
          "palette": Object {
            "helpers": Object {
              "applyAlphaToColour": [Function],
            },
            "misc": Object {
              "misc1": "#811114",
              "misc2": "#BD2C2F",
              "misc3": "#62BFD0",
              "misc4": "#800080",
              "misc5": "#0A274D",
            },
            "neutral": Object {
              "black": "#000000",
              "grey1": "#F9F9F9",
              "grey2": "#D9D9D9",
              "grey3": "#A6A6A6",
              "grey4": "#7F7F7F",
              "grey5": "#595959",
              "grey6": "#404040",
              "white": "#FFFFFF",
            },
            "primary": Object {
              "primary1": "#FBCE07",
              "primary2": "#DD1D21",
              "primary3": "#0097BB",
            },
            "secondary": Object {
              "secondary1": "#003C88",
              "secondary2": "#008443",
              "secondary3": "#89CFDC",
            },
          },
          "spacing": Object {
            "lg": "1.476rem",
            "md": "1rem",
            "sm": "0.678rem",
            "xl": "2.178rem",
            "xl2": "3.213rem",
            "xl3": "4.742rem",
            "xl4": "6.997rem",
            "xl5": "10.326rem",
            "xs": "0.459rem",
            "xs2": "0.311rem",
            "xs3": "0.211rem",
          },
        }
      }
    >
      <div
        className="c0 supporting-text supporting-text--top"
      >
        Test content
      </div>
    </styled.div>
  </SupportingText>
</Component>
`;

exports[`<SupportingText /> should render correctly with a position of bottom 1`] = `
.c0 {
  font-size: 0.878rem;
}

.c0.supporting-text--top {
  margin: 2px 0;
}

.c0.supporting-text--bottom {
  margin: 0.311rem 0 0;
}

<Component
  theme={
    Object {
      "backgroundColors": Object {
        "backgroundColor1": "#FBCE07",
        "backgroundColor10": "#404040",
        "backgroundColor11": "#BD2C2F",
        "backgroundColor2": "#DD1D21",
        "backgroundColor3": "#0097BB",
        "backgroundColor4": "#003C88",
        "backgroundColor5": "#008443",
        "backgroundColor6": "#FFFFFF",
        "backgroundColor7": "#F9F9F9",
        "backgroundColor8": "#D9D9D9",
        "backgroundColor9": "#595959",
      },
      "borderColors": Object {
        "borderColor1": "#FBCE07",
        "borderColor10": "#F9F9F9",
        "borderColor11": "#7F7F7F",
        "borderColor2": "#DD1D21",
        "borderColor3": "#0097BB",
        "borderColor4": "#008443",
        "borderColor5": "#D9D9D9",
        "borderColor6": "#A6A6A6",
        "borderColor7": "#595959",
        "borderColor8": "#404040",
        "borderColor9": "#FFFFFF",
      },
      "breakpoints": Object {
        "lg": "896px",
        "md": "768px",
        "sm": "640px",
        "up": [Function],
        "xl": "1080px",
        "xl2": "1600px",
        "xs": "480px",
      },
      "fontColors": Object {
        "fontColor1": "#DD1D21",
        "fontColor2": "#0097BB",
        "fontColor3": "#008443",
        "fontColor4": "#404040",
        "fontColor5": "#FFFFFF",
        "fontColor6": "#7F7F7F",
      },
      "fontSizes": Object {
        "lg": "1.138rem",
        "md": "1rem",
        "sm": "0.878rem",
        "xl": "1.296rem",
        "xl2": "1.476rem",
        "xl3": "1.68rem",
        "xl4": "1.913rem",
        "xl5": "2.178rem",
        "xl6": "2.479rem",
        "xs": "0.772rem",
      },
      "linkColors": Object {
        "linkColor1": "#003C88",
        "linkColor2": "#404040",
        "linkColor3": "#0A274D",
        "linkColor4": "#800080",
      },
      "palette": Object {
        "helpers": Object {
          "applyAlphaToColour": [Function],
        },
        "misc": Object {
          "misc1": "#811114",
          "misc2": "#BD2C2F",
          "misc3": "#62BFD0",
          "misc4": "#800080",
          "misc5": "#0A274D",
        },
        "neutral": Object {
          "black": "#000000",
          "grey1": "#F9F9F9",
          "grey2": "#D9D9D9",
          "grey3": "#A6A6A6",
          "grey4": "#7F7F7F",
          "grey5": "#595959",
          "grey6": "#404040",
          "white": "#FFFFFF",
        },
        "primary": Object {
          "primary1": "#FBCE07",
          "primary2": "#DD1D21",
          "primary3": "#0097BB",
        },
        "secondary": Object {
          "secondary1": "#003C88",
          "secondary2": "#008443",
          "secondary3": "#89CFDC",
        },
      },
      "spacing": Object {
        "lg": "1.476rem",
        "md": "1rem",
        "sm": "0.678rem",
        "xl": "2.178rem",
        "xl2": "3.213rem",
        "xl3": "4.742rem",
        "xl4": "6.997rem",
        "xl5": "10.326rem",
        "xs": "0.459rem",
        "xs2": "0.311rem",
        "xs3": "0.211rem",
      },
    }
  }
>
  <SupportingText
    content="Test content"
    position="bottom"
  >
    <styled.div
      className="supporting-text supporting-text--bottom"
      theme={
        Object {
          "backgroundColors": Object {
            "backgroundColor1": "#FBCE07",
            "backgroundColor10": "#404040",
            "backgroundColor11": "#BD2C2F",
            "backgroundColor2": "#DD1D21",
            "backgroundColor3": "#0097BB",
            "backgroundColor4": "#003C88",
            "backgroundColor5": "#008443",
            "backgroundColor6": "#FFFFFF",
            "backgroundColor7": "#F9F9F9",
            "backgroundColor8": "#D9D9D9",
            "backgroundColor9": "#595959",
          },
          "borderColors": Object {
            "borderColor1": "#FBCE07",
            "borderColor10": "#F9F9F9",
            "borderColor11": "#7F7F7F",
            "borderColor2": "#DD1D21",
            "borderColor3": "#0097BB",
            "borderColor4": "#008443",
            "borderColor5": "#D9D9D9",
            "borderColor6": "#A6A6A6",
            "borderColor7": "#595959",
            "borderColor8": "#404040",
            "borderColor9": "#FFFFFF",
          },
          "breakpoints": Object {
            "lg": "896px",
            "md": "768px",
            "sm": "640px",
            "up": [Function],
            "xl": "1080px",
            "xl2": "1600px",
            "xs": "480px",
          },
          "fontColors": Object {
            "fontColor1": "#DD1D21",
            "fontColor2": "#0097BB",
            "fontColor3": "#008443",
            "fontColor4": "#404040",
            "fontColor5": "#FFFFFF",
            "fontColor6": "#7F7F7F",
          },
          "fontSizes": Object {
            "lg": "1.138rem",
            "md": "1rem",
            "sm": "0.878rem",
            "xl": "1.296rem",
            "xl2": "1.476rem",
            "xl3": "1.68rem",
            "xl4": "1.913rem",
            "xl5": "2.178rem",
            "xl6": "2.479rem",
            "xs": "0.772rem",
          },
          "linkColors": Object {
            "linkColor1": "#003C88",
            "linkColor2": "#404040",
            "linkColor3": "#0A274D",
            "linkColor4": "#800080",
          },
          "palette": Object {
            "helpers": Object {
              "applyAlphaToColour": [Function],
            },
            "misc": Object {
              "misc1": "#811114",
              "misc2": "#BD2C2F",
              "misc3": "#62BFD0",
              "misc4": "#800080",
              "misc5": "#0A274D",
            },
            "neutral": Object {
              "black": "#000000",
              "grey1": "#F9F9F9",
              "grey2": "#D9D9D9",
              "grey3": "#A6A6A6",
              "grey4": "#7F7F7F",
              "grey5": "#595959",
              "grey6": "#404040",
              "white": "#FFFFFF",
            },
            "primary": Object {
              "primary1": "#FBCE07",
              "primary2": "#DD1D21",
              "primary3": "#0097BB",
            },
            "secondary": Object {
              "secondary1": "#003C88",
              "secondary2": "#008443",
              "secondary3": "#89CFDC",
            },
          },
          "spacing": Object {
            "lg": "1.476rem",
            "md": "1rem",
            "sm": "0.678rem",
            "xl": "2.178rem",
            "xl2": "3.213rem",
            "xl3": "4.742rem",
            "xl4": "6.997rem",
            "xl5": "10.326rem",
            "xs": "0.459rem",
            "xs2": "0.311rem",
            "xs3": "0.211rem",
          },
        }
      }
    >
      <div
        className="c0 supporting-text supporting-text--bottom"
      >
        Test content
      </div>
    </styled.div>
  </SupportingText>
</Component>
`;

exports[`<SupportingText /> should render correctly with a position of top 1`] = `
.c0 {
  font-size: 0.878rem;
}

.c0.supporting-text--top {
  margin: 2px 0;
}

.c0.supporting-text--bottom {
  margin: 0.311rem 0 0;
}

<Component
  theme={
    Object {
      "backgroundColors": Object {
        "backgroundColor1": "#FBCE07",
        "backgroundColor10": "#404040",
        "backgroundColor11": "#BD2C2F",
        "backgroundColor2": "#DD1D21",
        "backgroundColor3": "#0097BB",
        "backgroundColor4": "#003C88",
        "backgroundColor5": "#008443",
        "backgroundColor6": "#FFFFFF",
        "backgroundColor7": "#F9F9F9",
        "backgroundColor8": "#D9D9D9",
        "backgroundColor9": "#595959",
      },
      "borderColors": Object {
        "borderColor1": "#FBCE07",
        "borderColor10": "#F9F9F9",
        "borderColor11": "#7F7F7F",
        "borderColor2": "#DD1D21",
        "borderColor3": "#0097BB",
        "borderColor4": "#008443",
        "borderColor5": "#D9D9D9",
        "borderColor6": "#A6A6A6",
        "borderColor7": "#595959",
        "borderColor8": "#404040",
        "borderColor9": "#FFFFFF",
      },
      "breakpoints": Object {
        "lg": "896px",
        "md": "768px",
        "sm": "640px",
        "up": [Function],
        "xl": "1080px",
        "xl2": "1600px",
        "xs": "480px",
      },
      "fontColors": Object {
        "fontColor1": "#DD1D21",
        "fontColor2": "#0097BB",
        "fontColor3": "#008443",
        "fontColor4": "#404040",
        "fontColor5": "#FFFFFF",
        "fontColor6": "#7F7F7F",
      },
      "fontSizes": Object {
        "lg": "1.138rem",
        "md": "1rem",
        "sm": "0.878rem",
        "xl": "1.296rem",
        "xl2": "1.476rem",
        "xl3": "1.68rem",
        "xl4": "1.913rem",
        "xl5": "2.178rem",
        "xl6": "2.479rem",
        "xs": "0.772rem",
      },
      "linkColors": Object {
        "linkColor1": "#003C88",
        "linkColor2": "#404040",
        "linkColor3": "#0A274D",
        "linkColor4": "#800080",
      },
      "palette": Object {
        "helpers": Object {
          "applyAlphaToColour": [Function],
        },
        "misc": Object {
          "misc1": "#811114",
          "misc2": "#BD2C2F",
          "misc3": "#62BFD0",
          "misc4": "#800080",
          "misc5": "#0A274D",
        },
        "neutral": Object {
          "black": "#000000",
          "grey1": "#F9F9F9",
          "grey2": "#D9D9D9",
          "grey3": "#A6A6A6",
          "grey4": "#7F7F7F",
          "grey5": "#595959",
          "grey6": "#404040",
          "white": "#FFFFFF",
        },
        "primary": Object {
          "primary1": "#FBCE07",
          "primary2": "#DD1D21",
          "primary3": "#0097BB",
        },
        "secondary": Object {
          "secondary1": "#003C88",
          "secondary2": "#008443",
          "secondary3": "#89CFDC",
        },
      },
      "spacing": Object {
        "lg": "1.476rem",
        "md": "1rem",
        "sm": "0.678rem",
        "xl": "2.178rem",
        "xl2": "3.213rem",
        "xl3": "4.742rem",
        "xl4": "6.997rem",
        "xl5": "10.326rem",
        "xs": "0.459rem",
        "xs2": "0.311rem",
        "xs3": "0.211rem",
      },
    }
  }
>
  <SupportingText
    content="Test content"
    position="top"
  >
    <styled.div
      className="supporting-text supporting-text--top"
      theme={
        Object {
          "backgroundColors": Object {
            "backgroundColor1": "#FBCE07",
            "backgroundColor10": "#404040",
            "backgroundColor11": "#BD2C2F",
            "backgroundColor2": "#DD1D21",
            "backgroundColor3": "#0097BB",
            "backgroundColor4": "#003C88",
            "backgroundColor5": "#008443",
            "backgroundColor6": "#FFFFFF",
            "backgroundColor7": "#F9F9F9",
            "backgroundColor8": "#D9D9D9",
            "backgroundColor9": "#595959",
          },
          "borderColors": Object {
            "borderColor1": "#FBCE07",
            "borderColor10": "#F9F9F9",
            "borderColor11": "#7F7F7F",
            "borderColor2": "#DD1D21",
            "borderColor3": "#0097BB",
            "borderColor4": "#008443",
            "borderColor5": "#D9D9D9",
            "borderColor6": "#A6A6A6",
            "borderColor7": "#595959",
            "borderColor8": "#404040",
            "borderColor9": "#FFFFFF",
          },
          "breakpoints": Object {
            "lg": "896px",
            "md": "768px",
            "sm": "640px",
            "up": [Function],
            "xl": "1080px",
            "xl2": "1600px",
            "xs": "480px",
          },
          "fontColors": Object {
            "fontColor1": "#DD1D21",
            "fontColor2": "#0097BB",
            "fontColor3": "#008443",
            "fontColor4": "#404040",
            "fontColor5": "#FFFFFF",
            "fontColor6": "#7F7F7F",
          },
          "fontSizes": Object {
            "lg": "1.138rem",
            "md": "1rem",
            "sm": "0.878rem",
            "xl": "1.296rem",
            "xl2": "1.476rem",
            "xl3": "1.68rem",
            "xl4": "1.913rem",
            "xl5": "2.178rem",
            "xl6": "2.479rem",
            "xs": "0.772rem",
          },
          "linkColors": Object {
            "linkColor1": "#003C88",
            "linkColor2": "#404040",
            "linkColor3": "#0A274D",
            "linkColor4": "#800080",
          },
          "palette": Object {
            "helpers": Object {
              "applyAlphaToColour": [Function],
            },
            "misc": Object {
              "misc1": "#811114",
              "misc2": "#BD2C2F",
              "misc3": "#62BFD0",
              "misc4": "#800080",
              "misc5": "#0A274D",
            },
            "neutral": Object {
              "black": "#000000",
              "grey1": "#F9F9F9",
              "grey2": "#D9D9D9",
              "grey3": "#A6A6A6",
              "grey4": "#7F7F7F",
              "grey5": "#595959",
              "grey6": "#404040",
              "white": "#FFFFFF",
            },
            "primary": Object {
              "primary1": "#FBCE07",
              "primary2": "#DD1D21",
              "primary3": "#0097BB",
            },
            "secondary": Object {
              "secondary1": "#003C88",
              "secondary2": "#008443",
              "secondary3": "#89CFDC",
            },
          },
          "spacing": Object {
            "lg": "1.476rem",
            "md": "1rem",
            "sm": "0.678rem",
            "xl": "2.178rem",
            "xl2": "3.213rem",
            "xl3": "4.742rem",
            "xl4": "6.997rem",
            "xl5": "10.326rem",
            "xs": "0.459rem",
            "xs2": "0.311rem",
            "xs3": "0.211rem",
          },
        }
      }
    >
      <div
        className="c0 supporting-text supporting-text--top"
      >
        Test content
      </div>
    </styled.div>
  </SupportingText>
</Component>
`;
